# bike_sharing_demand

./: .gitignore  .pdm-python  preprocessing.ipynb  pyproject.toml  service.py  train.py
src/: preprocess.py
