[project]
name = "bike_sharing_demand"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Goodmytoy", email = "35749417+Goodmytoy@users.noreply.github.com"},
    {name = "Brady Kim", email = "81638919+fenzhantw@users.noreply.github.com"},
]
dependencies = [
    "bentoml==1.2.6",
    "scikit-learn==1.3.2",
    "pandas==2.1.4",
    "numpy==1.26.4",
    "mlflow==2.11.1",
    "category-encoders==2.6.3",
    "pydantic==2.6.3",
    "deepchecks==0.18.1",
    "joblib==1.3.2",
    "rich==13.7.1",
    "seaborn==0.13.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "matplotlib==3.8.3",
    "pre-commit>=3.7.0",
    "black>=24.3.0",
    "isort==5.13.2",
    "mypy==1.9.0",
    "jupyter==1.0.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
